# parkrun-club

./: .gitignore  ARCHITECTURE.md  README.md
.circleci/: config.yml
backend/: .python-version  Dockerfile  Makefile  README.md  main.py  pipeline.py  pyproject.toml
backend/data/0_source/: parkrun_permits.kml
backend/data/1_raw/: raw_parkrun_points.geojson  raw_parkrun_polygons.geojson  scotland_parkrun_points.geojson  wales_parkrun_points.geojson  wales_parkrun_polygons.geojson
backend/data/2_db_upload/: db_formatted_data.geojson  wales_db_data.geojson
backend/data/config/: pipeline_config.yaml
backend/data/countries/: ireland.geojson
backend/etl/: db.py  extract.py  load.py  orm.py  transform.py
backend/tests/data/: test_geojson_file.geojson  test_geojson_polygons_file.geojson
backend/tests/test_etl/: test_voronoi.py
backend/utils/: config.py
backend/voronoi/: geometry.py  models.py  plot.py  voronoi.py
database/: Dockerfile  README.md  deploy_test_db.sh  execute_sql_scripts.sh
database/ddl/: 01_setup.sql  99_logging.sql
deploys/charts/backend/: Chart.yaml  values.yaml
deploys/charts/frontend/: values.yaml
deploys/frontendbuild/: docker-compose.yml
deploys/k8s/: .dockerignore  docker-compose.yaml  start_k8s_local.sh
deploys/k8s/build_service/: Dockerfile  build_service.sh
deploys/local/: .dockerignore  docker-compose.yaml
frontend/: .dockerignore  .eslintrc.json  Dockerfile  Dockerfile.dev  auth.config.ts  auth.ts  build_script.sh  next.config.js  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: middleware.ts
(+149 files in other folders)
