[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["James Walden <james.m.walden@outlook.com>"]
readme = "README.md"
# packages = [{include = "databot"}, {include="etl"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.103.2"
pandas = "^2.1.1"
uvicorn = "^0.23.2"
lxml = "^4.9.3"
redis = "^5.0.3"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
kml2geojson = "^5.1.0"
mysqlclient = "^2.2.4"
pymysql = "^1.1.0"
scipy = "^1.13.0"
geopandas = "^0.14.3"
matplotlib = "^3.8.4"
pytest-cov = "^5.0.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
pytest = "^8.1.1"

[tool.black]
line-length = 110
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 110
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
